--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "element-ui": "^2.7.2",
+    "node-sass": "^4.11.0",
+    "pug-plain-loader": "^1.0.0",
+    "sass-loader": "^7.1.0",
     "vue": "^2.6.6",
+    "vue-draggable-nested-tree": "^2.2.17",
     "vue-router": "^3.0.1",
+    "vuedraggable": "^2.20.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
